layout fixed (scrollbar in window)

--- a/src/renderer/css/now-note.less
+++ b/src/renderer/css/now-note.less
@@ -49,7 +49,6 @@ body {
 	display: block;
 	height: 100%;
 	width: 100%;
-	padding-bottom: 20px;
 }
 
 #nn-top-menu {
@@ -100,6 +99,7 @@ body {
 	display: block;
 	height: 100%;
 	width: 100%;
+	padding-bottom: 10px;
 }
 
 .nn-center-screen {
